# cvec-db

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/cvec_db/: __init__.py  cli.py
