[project]
name = "cvec-db"
version = "0.1.0"
description = "CVE database builder - generates parquet files for cvec tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "database"]
dependencies = [
    "cvec[semantic] @ git+https://github.com/RomainRiv/cvec.git@510b3ee31700002c8088a001f3b20c572505bb04",
    "typer>=0.16.0",
    "polars>=1.31.0",
]

[project.scripts]
cvec-db = "cvec_db.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvec_db"]

[tool.hatch.metadata]
allow-direct-references = true
